--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </li>
   </ul>
   <hr size="3" noshade>
+  <!.. just edited to see if iam able to edit or not ..>
 
   <h3>Skills</h3>
   <table cellspacing="20" border="1">
